-changed nodes to start and end fields -basic storage working

--- a/www/start.html
+++ b/www/start.html
@@ -26,6 +26,7 @@
       <script src="code/tools.js?03"></script>
       <script src="code/generic_object.js?01"></script>
       <script src="code/train.js?02"></script>
+      <script src="code/trackNode.js?01"></script>
       <script src="code/track.js?03"></script>
       <script src="code/signal.js?04"></script>
       <script src="code/trackRendering_basic.js?03"></script>
