--- a/www/start.html
+++ b/www/start.html
@@ -112,6 +112,7 @@
          </div>
 
          <div class="d-flex ms-auto" style="gap: 10px; padding-right: 1rem">
+            
             <div class="dropdown">
                <button
                   class="btn btn-primary rounded-pill"
@@ -213,6 +214,24 @@
                   id="colorInputTrain"
                   value="#563d7c"
                   title="Choose your color" />
+            </div>
+            <div class="mb-3">
+               <label for="selectTrainType" class="form-label">Wagentyp</label>
+               <select class="form-select form-select-sm" id="selectTrainType">
+                  <option value="locomotive">Lokomotive</option>
+                  <option value="passenger">Personenwagen</option>
+               </select>
+            </div>
+            <div class="btn-group m-2 webkit-fill-width" role="group">
+               <button id="btnCoupleTrain" type="button" class="btn btn-sm btn-outline-primary">
+                  <i class="bi bi-link"></i> Kuppeln
+               </button>
+               <button id="btnUncoupleTrain" type="button" class="btn btn-sm btn-outline-primary">
+                  <i class="bi bi-link-break"></i> Entkuppeln
+               </button>
+            </div>
+            <div id="couplingMessage" class="alert alert-info mt-2" style="display:none;">
+               Wähle einen zweiten Wagen zum Kuppeln
             </div>
             <div class="btn-group m-3 webkit-fill-width" role="group">
                <button id="btnRemoveTrain" type="button" class="btn btn-sm btn-outline-danger">
