+ Trains all fully working, can couple/decouple, drive automaticly

--- a/www/start.html
+++ b/www/start.html
@@ -222,6 +222,25 @@
                   <option value="passenger">Personenwagen</option>
                </select>
             </div>
+            
+            <!-- Train Movement Controls -->
+            <div id="trainMovementControls" class="mb-3">
+               <h6>Zugsteuerung</h6>
+               <div class="btn-group m-2 webkit-fill-width" role="group">
+                  <button id="btnDirectionBackward" type="button" class="btn btn-sm btn-outline-primary">
+                     <i class="bi bi-arrow-left"></i> Rückwärts
+                  </button>
+                  <button id="btnDirectionForward" type="button" class="btn btn-sm btn-outline-primary">
+                     <i class="bi bi-arrow-right"></i> Vorwärts
+                  </button>
+               </div>
+               <div class="btn-group m-2 webkit-fill-width" role="group">
+                  <button id="btnStartStopTrain" type="button" class="btn btn-sm btn-success">
+                     <i class="bi bi-play-fill"></i> Start
+                  </button>
+               </div>
+            </div>
+            
             <div class="btn-group m-2 webkit-fill-width" role="group">
                <button id="btnCoupleTrain" type="button" class="btn btn-sm btn-outline-primary">
                   <i class="bi bi-link"></i> Kuppeln
