+ selektion wird sauber angezeigt + eingleisiges prebuild aktualisiert

--- a/www/start.html
+++ b/www/start.html
@@ -391,7 +391,7 @@
                               <p class="card-text">Mehere Bahnhöfe an einer zweigleisigen Strecke.</p>
                            </div>
                            <div class="card-footer d-grid" style="background-color: white; border-top: none">
-                              <button href="#" id="btnLoad2Gleisig" data="2gleisig" class="btn btn-sm btn-primary">Start</button>
+                              <button href="#" id="btnLoad2Gleisig" data="2gleisig" class="btn btn-sm btn-primary" disabled>Start</button>
                            </div>
                         </div>
                      </div>
