--- a/www/start.html
+++ b/www/start.html
@@ -28,6 +28,7 @@
       <script src="code/train.js?04"></script>
       <script src="code/trackNode.js?04"></script>
       <script src="code/track.js?04"></script>
+      <script src="code/switch.js?04"></script>
       <script src="code/signal.js?04"></script>
       <script src="code/trackRendering_basic.js?04"></script>
       <script src="code/trackRendering_textured.js?04"></script>
@@ -101,7 +102,7 @@
             <div class="dropdown-menu" id="DropDownOptions" style="min-width: 14rem">
                <span class="dropdown-item-text">
                   <div class="form-check form-switch">
-                     <input class="form-check-input" type="checkbox" role="switch" id="switch_renderer" checked /><label
+                     <input class="form-check-input" type="checkbox" role="switch" id="switch_renderer" /><label
                         class="form-check-label"
                         for="switch_renderer"
                         >vereinfachte Ansicht</label
