--- a/www/start.html
+++ b/www/start.html
@@ -20,20 +20,7 @@
       <script src="dev/jquery-3.7.1.min.js"></script>
       <script src="dev/createjs.js"></script>
 
-      <script src="code/preLoader.js?04"></script>
-      <script src="code/signaling.js?04"></script>
-
-      <script src="code/tools.js?04"></script>
-      <script src="code/generic_object.js?04"></script>
-      <script src="code/train.js?04"></script>
-      <script src="code/track.js?04"></script>
-      <script src="code/switch.js?04"></script>
-      <script src="code/signal.js?04"></script>
-      <script src="code/trackRendering_basic.js?04"></script>
-      <script src="code/trackRendering_textured.js?04"></script>
-      <script src="code/storage.js?04"></script>
-      <script src="code/start.js?04"></script>
-      <script src="code/signal_library.js?04"></script>
+      <script src="dist/bundle.js"></script>
 
       <style type="text/css"></style>
       <script></script>
