resized grid, bugfix, prebuild zweigleisig

--- a/www/start.html
+++ b/www/start.html
@@ -346,6 +346,28 @@
                </button>
             </div>
          </div>
+         <div id="editTrackMenu" class="sidebar_menu">
+            <div class="sidebar_menu_header">
+               <h5 class="card-title">Gleis</h5>
+            </div>
+            <div class="row g-3 align-items-center">
+               <div class="col-auto">
+                  <label for="inputBumper" class="col-form-label">Bumper:</label>
+               </div>
+               <div class="col-auto">
+                  <input class="form-check-input" type="checkbox" role="switch" id="inputBumper"/>
+               </div>
+            </div>
+            <!-- <div>
+               <label for="colorInput" class="form-label">Farbe</label>
+               <input type="color" class="form-control form-control-color" id="colorInput" value="#563d7c" title="Choose your color" />
+            </div> -->
+            <div class="btn-group m-3 webkit-fill-width" role="group">
+               <button id="btnRemoveTrack" type="button" class="btn btn-sm btn-outline-danger">
+                  <i class="bi bi-trash"></i> Entfernen
+               </button>
+            </div>
+         </div>
       </div>
       <div class="modal fade" id="loadModal" tabindex="-1">
          <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg modal-fullscreen-lg-down">
@@ -367,7 +389,7 @@
                               <p class="card-text">Mehere Bahnhöfe an einer zweigleisigen Strecke.</p>
                            </div>
                            <div class="card-footer d-grid" style="background-color: white; border-top: none">
-                              <button href="#" id="btnLoad2Gleisig" data="2gleisig" class="btn btn-sm btn-primary" disabled>Start</button>
+                              <button href="#" id="btnLoad2Gleisig" data="2gleisig" class="btn btn-sm btn-primary">Start</button>
                            </div>
                         </div>
                      </div>
