--- a/www/start.html
+++ b/www/start.html
@@ -352,7 +352,7 @@
             </div>
             <div class="row g-3 align-items-center">
                <div class="col-auto">
-                  <label for="inputBumper" class="col-form-label">Bumper:</label>
+                  <label for="inputBumper" class="col-form-label">Prellbock:</label>
                </div>
                <div class="col-auto">
                   <input class="form-check-input" type="checkbox" role="switch" id="inputBumper"/>
